# resources/js/models/User.model.ts
@@ -4,4 +4,13 @@ export interface UserProps extends BaseProps {
     name: string,
     email: string,
     password?: string,
+    avatar?: UserAvatarProps
+}
+
+export interface UserAvatarProps {
+    data: string;
+    file_name: string;
+    media_type: string;
+    user_id: string;
+    src?: string;
 }
